infra/k8s/kustomize/dev-gcloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongodb-service
  namespace: ticketing
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: auth-mongodb
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ticketing
spec:
  ports:
  - name: auth
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: auth
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: ticketing
spec:
  ports:
  - name: front
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: front
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: auth-configmap
        - name: MONGODB_URL
          valueFrom:
            secretKeyRef:
              key: MONGODB_URL
              name: auth-secret
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: common-secret
        image: us.gcr.io/prime-byway-274602/msnr-ta-auth-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /auth/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: auth
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /auth/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongodb
  template:
    metadata:
      labels:
        app: auth-mongodb
      namespace: ticketing
    spec:
      containers:
      - image: mongo:latest
        name: auth-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
      namespace: ticketing
    spec:
      containers:
      - image: us.gcr.io/prime-byway-274602/msnr-ta-front-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health/healthz
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 25
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 20
        name: next
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health/healthz
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 20
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: 3001
          timeoutSeconds: 5
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ticketing-ingress
  namespace: ticketing
spec:
  rules:
  - host: ticketing-api.104.197.128.80.nip.io
    http:
      paths:
      - backend:
          service:
            name: auth-service
            port:
              number: 3000
        path: /auth
        pathType: Prefix
  - host: ticketing.104.197.128.80.nip.io
    http:
      paths:
      - backend:
          service:
            name: front-service
            port:
              number: 3001
        path: /
        pathType: Prefix
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongodb-service
  namespace: ticketing
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: auth-mongodb
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ticketing
spec:
  ports:
  - name: auth
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: auth
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: ticketing
spec:
  ports:
  - name: front
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: front
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongodb-service
  namespace: ticketing
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: tickets-mongodb
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
  namespace: ticketing
spec:
  ports:
  - name: tickets
    port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: tickets
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: FORCE_INSECURE_COOKIE
          valueFrom:
            configMapKeyRef:
              key: FORCE_INSECURE_COOKIE
              name: auth-configmap
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: common-configmap
        - name: CORS_ORIGIN
          valueFrom:
            configMapKeyRef:
              key: CORS_ORIGIN
              name: common-configmap
        - name: COOKIE_SESSION_DOMAIN
          valueFrom:
            configMapKeyRef:
              key: COOKIE_SESSION_DOMAIN
              name: common-configmap
        - name: MONGODB_URL
          valueFrom:
            secretKeyRef:
              key: MONGODB_URL
              name: auth-secret
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: common-secret
        image: us.gcr.io/prime-byway-274602/msnr-ta-auth-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /auth/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: auth
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /auth/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongodb
  template:
    metadata:
      labels:
        app: auth-mongodb
      namespace: ticketing
    spec:
      containers:
      - image: mongo:latest
        name: auth-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: NEXT_PUBLIC_ENV
          valueFrom:
            configMapKeyRef:
              key: NEXT_PUBLIC_ENV
              name: front-configmap
        - name: NEXT_PUBLIC_API_URL
          valueFrom:
            configMapKeyRef:
              key: NEXT_PUBLIC_API_URL
              name: front-configmap
        - name: AUTH_MICROSERVICE_NAME
          valueFrom:
            configMapKeyRef:
              key: AUTH_MICROSERVICE_NAME
              name: front-configmap
        - name: AUTH_MICROSERVICE_PORT
          valueFrom:
            configMapKeyRef:
              key: AUTH_MICROSERVICE_PORT
              name: front-configmap
        image: us.gcr.io/prime-byway-274602/msnr-ta-front-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health/healthz
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 25
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 20
        name: next
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health/healthz
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 20
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: 3001
          timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: FORCE_INSECURE_COOKIE
          valueFrom:
            configMapKeyRef:
              key: FORCE_INSECURE_COOKIE
              name: common-configmap
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: common-configmap
        - name: CORS_ORIGIN
          valueFrom:
            configMapKeyRef:
              key: CORS_ORIGIN
              name: common-configmap
        - name: COOKIE_SESSION_DOMAIN
          valueFrom:
            configMapKeyRef:
              key: COOKIE_SESSION_DOMAIN
              name: common-configmap
        - name: MONGODB_URL
          valueFrom:
            secretKeyRef:
              key: MONGODB_URL
              name: tickets-secret
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: common-secret
        image: us.gcr.io/prime-byway-274602/msnr-ta-tickets-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /tickets/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: tickets
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /tickets/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongodb
  template:
    metadata:
      labels:
        app: tickets-mongodb
      namespace: ticketing
    spec:
      containers:
      - image: mongo:latest
        name: tickets-mongodb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ticketing-ingress
  namespace: ticketing
spec:
  rules:
  - host: ticketing-api.104.197.128.80.nip.io
    http:
      paths:
      - backend:
          service:
            name: auth-service
            port:
              number: 3000
        path: /auth
        pathType: Prefix
      - backend:
          service:
            name: tickets-service
            port:
              number: 3002
        path: /tickets
        pathType: Prefix
  - host: ticketing.104.197.128.80.nip.io
    http:
      paths:
      - backend:
          service:
            name: front-service
            port:
              number: 3001
        path: /
        pathType: Prefix
