infra/k8s/kustomize/dev-microk8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongodb-service
  namespace: ticketing
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: auth-mongodb
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ticketing
spec:
  ports:
  - name: auth
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: auth
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-service
  namespace: ticketing
spec:
  ports:
  - name: db
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: expiration-redis
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: ticketing
spec:
  ports:
  - name: front
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: front
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nats-service
  namespace: ticketing
spec:
  ports:
  - name: client
    port: 4222
    protocol: TCP
    targetPort: 4222
  - name: monitoring
    port: 8222
    protocol: TCP
    targetPort: 8222
  selector:
    app: nats
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongodb-service
  namespace: ticketing
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: orders-mongodb
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: ticketing
spec:
  ports:
  - name: orders
    port: 3003
    protocol: TCP
    targetPort: 3003
  selector:
    app: orders
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongodb-service
  namespace: ticketing
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: payments-mongodb
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: ticketing
spec:
  ports:
  - name: payments
    port: 3004
    protocol: TCP
    targetPort: 3004
  selector:
    app: payments
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongodb-service
  namespace: ticketing
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: tickets-mongodb
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
  namespace: ticketing
spec:
  ports:
  - name: tickets
    port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: tickets
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: common-configmap
        - name: CORS_ORIGIN
          valueFrom:
            configMapKeyRef:
              key: CORS_ORIGIN
              name: common-configmap
        - name: COOKIE_SESSION_DOMAIN
          valueFrom:
            configMapKeyRef:
              key: COOKIE_SESSION_DOMAIN
              name: common-configmap
        - name: MONGODB_URL
          valueFrom:
            secretKeyRef:
              key: MONGODB_URL
              name: auth-secret
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: common-secret
        image: localhost:32000/msnr-ta-auth-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /auth/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: auth
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /auth/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongodb
  template:
    metadata:
      labels:
        app: auth-mongodb
      namespace: ticketing
    spec:
      containers:
      - image: mongo:latest
        name: auth-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: common-configmap
        - name: NATS_CLUSTER_ID
          valueFrom:
            configMapKeyRef:
              key: NATS_CLUSTER_ID
              name: common-configmap
        - name: NATS_CLIENT_ID
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NATS_SERVER_URL
          valueFrom:
            configMapKeyRef:
              key: NATS_SERVER_URL
              name: common-configmap
        - name: REDIS_HOST
          valueFrom:
            secretKeyRef:
              key: REDIS_HOST
              name: expiration-secret
        image: localhost:32000/msnr-ta-expiration-skaffold
        livenessProbe:
          exec:
            command:
            - ts-node
            - /node/src/healthcheck.ts
          failureThreshold: 5
          initialDelaySeconds: 45
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 45
        name: expiration
        readinessProbe:
          exec:
            command:
            - ts-node
            - /node/src/healthcheck.ts
          failureThreshold: 5
          initialDelaySeconds: 45
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 45
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
      namespace: ticketing
    spec:
      containers:
      - image: redis:latest
        name: expiration-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
          valueFrom:
            configMapKeyRef:
              key: NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
              name: front-configmap
        - name: NEXT_PUBLIC_ENV
          valueFrom:
            configMapKeyRef:
              key: NEXT_PUBLIC_ENV
              name: front-configmap
        - name: NEXT_PUBLIC_API_URL
          valueFrom:
            configMapKeyRef:
              key: NEXT_PUBLIC_API_URL
              name: front-configmap
        - name: AUTH_MICROSERVICE_NAME
          valueFrom:
            configMapKeyRef:
              key: AUTH_MICROSERVICE_NAME
              name: front-configmap
        - name: AUTH_MICROSERVICE_PORT
          valueFrom:
            configMapKeyRef:
              key: AUTH_MICROSERVICE_PORT
              name: front-configmap
        - name: TICKETS_MICROSERVICE_NAME
          valueFrom:
            configMapKeyRef:
              key: TICKETS_MICROSERVICE_NAME
              name: front-configmap
        - name: TICKETS_MICROSERVICE_PORT
          valueFrom:
            configMapKeyRef:
              key: TICKETS_MICROSERVICE_PORT
              name: front-configmap
        - name: ORDERS_MICROSERVICE_NAME
          valueFrom:
            configMapKeyRef:
              key: ORDERS_MICROSERVICE_NAME
              name: front-configmap
        - name: ORDERS_MICROSERVICE_PORT
          valueFrom:
            configMapKeyRef:
              key: ORDERS_MICROSERVICE_PORT
              name: front-configmap
        - name: PAYMENTS_MICROSERVICE_NAME
          valueFrom:
            configMapKeyRef:
              key: PAYMENTS_MICROSERVICE_NAME
              name: front-configmap
        - name: PAYMENTS_MICROSERVICE_PORT
          valueFrom:
            configMapKeyRef:
              key: PAYMENTS_MICROSERVICE_PORT
              name: front-configmap
        image: localhost:32000/msnr-ta-front-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health/healthz
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 50
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 20
        name: next
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health/healthz
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 20
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: 3001
          timeoutSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
      namespace: ticketing
    spec:
      containers:
      - args:
        - -p
        - "4222"
        - -m
        - "8222"
        - -hbi
        - 5s
        - -hbt
        - 5s
        - -hbf
        - "2"
        - -SD
        - -cid
        - ticketing
        image: nats-streaming:0.24.5
        name: nats
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: common-configmap
        - name: CORS_ORIGIN
          valueFrom:
            configMapKeyRef:
              key: CORS_ORIGIN
              name: common-configmap
        - name: COOKIE_SESSION_DOMAIN
          valueFrom:
            configMapKeyRef:
              key: COOKIE_SESSION_DOMAIN
              name: common-configmap
        - name: NATS_CLUSTER_ID
          valueFrom:
            configMapKeyRef:
              key: NATS_CLUSTER_ID
              name: common-configmap
        - name: NATS_CLIENT_ID
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NATS_SERVER_URL
          valueFrom:
            configMapKeyRef:
              key: NATS_SERVER_URL
              name: common-configmap
        - name: EXPIRATION_WINDOW_SECONDS
          valueFrom:
            configMapKeyRef:
              key: EXPIRATION_WINDOW_SECONDS
              name: orders-configmap
        - name: MONGODB_URL
          valueFrom:
            secretKeyRef:
              key: MONGODB_URL
              name: orders-secret
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: common-secret
        image: localhost:32000/msnr-ta-orders-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /orders/health/healthz
            port: 3003
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: orders
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /orders/health/healthz
            port: 3003
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3003
          timeoutSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongodb
  template:
    metadata:
      labels:
        app: orders-mongodb
      namespace: ticketing
    spec:
      containers:
      - image: mongo:latest
        name: orders-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: common-configmap
        - name: CORS_ORIGIN
          valueFrom:
            configMapKeyRef:
              key: CORS_ORIGIN
              name: common-configmap
        - name: COOKIE_SESSION_DOMAIN
          valueFrom:
            configMapKeyRef:
              key: COOKIE_SESSION_DOMAIN
              name: common-configmap
        - name: NATS_CLUSTER_ID
          valueFrom:
            configMapKeyRef:
              key: NATS_CLUSTER_ID
              name: common-configmap
        - name: NATS_CLIENT_ID
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NATS_SERVER_URL
          valueFrom:
            configMapKeyRef:
              key: NATS_SERVER_URL
              name: common-configmap
        - name: MONGODB_URL
          valueFrom:
            secretKeyRef:
              key: MONGODB_URL
              name: payments-secret
        - name: STRIPE_API_KEY
          valueFrom:
            secretKeyRef:
              key: STRIPE_API_KEY
              name: payments-secret
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: common-secret
        image: localhost:32000/msnr-ta-payments-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /payments/health/healthz
            port: 3004
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: payments
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /payments/health/healthz
            port: 3004
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3004
          timeoutSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongodb
  template:
    metadata:
      labels:
        app: payments-mongodb
      namespace: ticketing
    spec:
      containers:
      - image: mongo:latest
        name: payments-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
      namespace: ticketing
    spec:
      containers:
      - env:
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: common-configmap
        - name: CORS_ORIGIN
          valueFrom:
            configMapKeyRef:
              key: CORS_ORIGIN
              name: common-configmap
        - name: COOKIE_SESSION_DOMAIN
          valueFrom:
            configMapKeyRef:
              key: COOKIE_SESSION_DOMAIN
              name: common-configmap
        - name: NATS_CLUSTER_ID
          valueFrom:
            configMapKeyRef:
              key: NATS_CLUSTER_ID
              name: common-configmap
        - name: NATS_CLIENT_ID
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NATS_SERVER_URL
          valueFrom:
            configMapKeyRef:
              key: NATS_SERVER_URL
              name: common-configmap
        - name: MONGODB_URL
          valueFrom:
            secretKeyRef:
              key: MONGODB_URL
              name: tickets-secret
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: JWT_SECRET
              name: common-secret
        image: localhost:32000/msnr-ta-tickets-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /tickets/health/healthz
            port: 3002
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: tickets
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /tickets/health/healthz
            port: 3002
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3002
          timeoutSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongodb
  template:
    metadata:
      labels:
        app: tickets-mongodb
      namespace: ticketing
    spec:
      containers:
      - image: mongo:latest
        name: tickets-mongodb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  namespace: ticketing
spec:
  ingressClassName: public
  rules:
  - host: ticketing-api.10.64.140.43.nip.io
    http:
      paths:
      - backend:
          service:
            name: auth-service
            port:
              number: 3000
        path: /auth
        pathType: Prefix
      - backend:
          service:
            name: tickets-service
            port:
              number: 3002
        path: /tickets
        pathType: Prefix
      - backend:
          service:
            name: orders-service
            port:
              number: 3003
        path: /orders
        pathType: Prefix
      - backend:
          service:
            name: payments-service
            port:
              number: 3004
        path: /payments
        pathType: Prefix
  - host: ticketing.10.64.140.43.nip.io
    http:
      paths:
      - backend:
          service:
            name: front-service
            port:
              number: 3001
        path: /
        pathType: Prefix
