infra/k8s/kustomize/microk8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing
---
apiVersion: 1
kind: Service
metadata:
  name: auth-mongodb-service
  namespace: ticketing
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: auth-mongodb
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ticketing
spec:
  ports:
  - name: auth
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: auth
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
      namespace: ticketing
    spec:
      containers:
      - image: localhost:32000/msnr-ta-auth-skaffold
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /auth/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: auth
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /auth/health/healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb-deployment
  namespace: ticketing
spec:
  replicas: 1
  selector:
    app: auth-mongodb
  template:
    metadata:
      labels:
        app: auth-mongodb
      namespace: ticketing
    spec:
      containers:
      - image: mongo:latest
        name: auth-mongodb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  namespace: ticketing
spec:
  ingressClassName: public
  rules:
  - host: ticketing-api.10.64.140.43.nip.io
    http:
      paths:
      - backend:
          service:
            name: auth-service
            port:
              number: 3000
        path: /auth
        pathType: Prefix
